@@ -1,3 +1,11 @@
+2017-02-04  Dirk Eddelbuettel  <edd@max.eddelbuettel.com>
+
+	* DESCRIPTION (Version, Date): Roll minor version
+
+	* R/pushes.R (pbPost): Correct target device designation
+
+	* attic/pbpost.r (localPbPost): Test script by Seth, slight mod'ed
+
 2017-02-03  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Release 0.3.0
